--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://doe_simples_db_user:FQ7EQ1DbVjCbYfS6wcv8Ee0mmIff1yHA@dpg-cr3pk5jv2p9s73e0n95g-a/doe_simples_db
+postgresql://doe_simples_db_user:FQ7EQ1DbVjCbYfS6wcv8Ee0mmIff1yHA@dpg-cr3pk5jv2p9s73e0n95g-a/doe_simples_db
